--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2024"
 winit = { version = "0.30.11" }
 pollster = { version = "0.4" }
 wgpu = { version = "25.0.2" }
+bytemuck = { version = "1.23.0" }
