--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ pollster = { version = "0.4" }
 wgpu = { version = "25.0.2" }
 bytemuck = { version = "1.23.0" }
 obj-rs = { version = "0.7" }
+rand = { version = "0.8" }
